fixed about image on mobile

--- a/app.css
+++ b/app.css
@@ -258,7 +258,7 @@ h1 {
 @media screen and (max-width:600px) {   
   .about-image {
     width: 200px;
-    height: 25%;
+    height: 33%;
     display: block;
     margin-left: 20%;   /* Defines the space outside the element, on the right side. */
     margin-right: 20%;        
